--- a/style.css
+++ b/style.css
@@ -133,6 +133,19 @@ ul li a{
     gap: 20px;
     margin-left: 20%;
 }
+.about P{
+    width: 100%;
+}
+footer{
+    background-color: #000;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    margin-top: 60px;
+}
+
+
+
 
 @media(max-width:600px){
 
@@ -204,14 +217,6 @@ ul li a{
     font-size: 10px;
 }
 
-.about p {
-    
-  text-align: left;
-  width: 1%;
-  
-    
-    
-}
 
 label{
     display:block;
@@ -272,25 +277,8 @@ label{
 /* ---------faqi----- */
 
 /* -----footer---- */
-.footer{
-    background: rgb(63, 62, 62);
-    width: 100%;
-    height: 200px;
-    margin-top: 5rem;
-}
 
-.footer-col{
-    color: #fff;
-    display: flex;
-    padding: 3rem;
-    
 
-}
-
-.footer-col P{
-    margin-left: 20%;
-    font-size: 18px;
-}
 
 /* -----footer---- */
 
@@ -302,10 +290,11 @@ label{
 }
 
 .about p{
-    width: 800px;
-    margin-left: 16%;
+    width: 100%;
     line-height: 30px;
     margin-top: 3rem;
+    text-align: center;
+    padding: 0 30px;
   
 }
 
