--- a/style.css
+++ b/style.css
@@ -4,29 +4,54 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+img{
+    width: 100%;
+}
 
-nav{
+.container{
     max-width: 1100px;
     margin: auto;
     padding: 0 15px;
    
 
 }
+.logo h1{
+    font-size: 40px;
+    font-weight: 600;
+}
 .btn{
     cursor: pointer;
 }
+header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0,0,0,.5);
+    background-color:darkslategray ;
+    color: #fff;
+}
 
-.container{
+nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    align-content: center;
       padding-left: 30px;
+      height: 80px;
+    
     padding-right: 30px;
+    /* background-color: #f3f1f1; */
+    
 
 }
 
 .container ul {
     display: flex;
+    align-items: center;
    
 
 }
@@ -39,28 +64,40 @@ ul li a{
   
     text-decoration: none;
     font-size: 20px;
+    color: #fff;
+}
+li a:hover{
+    color: crimson;
+}
+.hero-section{
+    min-height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    
+
 }
 
-.hero-section .container{
-    width: 90%;
-    margin-top: 2rem;
-   
-   
-    
-}
+
 
    
   
     
 
 .text-hero h1{
-     margin: 10px;
+     margin: 10px 0;
+     font-size: 45px;
+     font-weight: 700;
+     margin-bottom: 15px;
+     color: darkblue;
+     text-transform: uppercase;
 }
 
 .text-hero p{
-    margin: 10px;
-    font-size: 17px;
+    font-size: 16px;
     line-height: 30px;
+    margin-bottom: 20px;
 }
 
 .btn-primary{
@@ -80,10 +117,12 @@ ul li a{
     cursor: pointer;
 }
 
-.image{
-    width: 180px;
-    border-radius: 15px;
-    margin-left: 10rem;
+.content img{
+    width: 300px;
+    border-radius: 25px;
+    margin-left: 30px;
+    
+
  
     
    
@@ -92,9 +131,13 @@ ul li a{
 
 .content{
     display: flex;
-    margin-left: 7rem;
-    padding-left: 30px;
-    margin-top: 4rem;
+    justify-items: space-between;
+    align-items: center;
+    /* align-content: center; */
+    gap: 80px;
+    /* margin-left: 7rem; */
+    /* padding-left: 30px; */
+    padding-top: 6rem;
     
    
 
@@ -109,39 +152,97 @@ ul li a{
     margin-top: 10rem;
     background-color: rgb(3, 31, 32);
     width: 100%;
-    height: 350px;
+    /* height: 350px;*/
+    padding: 60px 0;
+    height: auto;
 }
 
 .Testimonal h2{
     font-size: 30px;
     color: aliceblue;
-    padding: 20px;
+    margin-bottom: 30px;
 
 }
 
 
-.col-1{
-    width: 250px;
-    background-color: aliceblue;
-}
-.col-1 p{
-    padding: 10px 10px;
-}
 
 .Testimonal-col{
     display: flex;
+    justify-content: center;
     gap: 20px;
-    margin-left: 20%;
+    margin: 0 20px;
 }
-.about P{
-    width: 100%;
+.col-1{
+    background-color: rgb(42, 196, 196);
+    color: #f3f1f1;
+    padding: 20px;
+    border-radius: 30px;
 }
+.col-1 h3{
+    text-transform: capitalize;
+    color: blueviolet;
+    font-size: 18px;
+    font-weight: 800;
+
+}
+.col-1 span{
+    font-size: 14px;
+    font-weight: 500;
+}
+.col-1 p{
+    color: rgb(37, 35, 35);
+    margin-top: 15px;
+    font-weight: 540;
+    font-size: 15px;
+}
+.col-1 img{
+    border-radius: 50%;
+    width: 100px;
+    height: 70px;
+    margin-bottom: 5PX;
+}
+
+.faqi{
+    margin-top: 80px;
+}
+.faqi h3{
+    text-align: center;
+    font-size: 32px;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+
 footer{
     background-color: #000;
     color: #fff;
     padding: 20px;
     text-align: center;
     margin-top: 60px;
+}
+footer p{
+    font-size: 14px;
+}
+
+
+
+.about{
+    position: relative;
+    top: -80px;
+    /* background-color: aqua; */
+}
+
+
+@media(max-width:992px){
+
+    .content{
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+    .content img{
+        width: 500px;
+        margin: 0;
+    }
 }
 
 
@@ -150,20 +251,21 @@ footer{
 @media(max-width:600px){
 
     nav{
-        background-color: aqua;
+        /* background-color: aqua; */
     }
 
-    .container ul {
+    nav ul {
         position: absolute;
         flex-direction: column;
-        top: 25px;
+        top: 80px;
         right: 0;
         left: 0;
-        background-color: aquamarine;
+        background-color: rgb(13, 88, 63);
         text-align: center;
-        height: 100%;
+        height: 300px;
         width: 100%;
         overflow: hidden;
+        z-index: 1000;
        
       
 
@@ -181,9 +283,8 @@ footer{
         flex-direction: column;
         margin: 5px;
     }
-    .image{
-        margin-top: 2.2rem;
-        margin-right: 5%;
+    .content img{
+       width: 400px;
     }
 
     .menu-icon{
@@ -201,14 +302,14 @@ footer{
 }
 .Testimonal{
      width: 100%;
-    height: 700px;
+    /* height: 700px; */
 }
 
-.faqi{
+/* .faqi{
     text-align: center;
     margin-top: 7rem;
    
-}
+} */
 .questions-containe{
     width: 300px;
 }
@@ -233,7 +334,7 @@ label{
 
 
 /* ---------faqi----- */
-.faqi{
+/* .faqi{
     text-align: center;
     margin-top: 5rem;
 }
@@ -241,7 +342,7 @@ label{
 .faqi h3{
     font-size: 30px;
     margin: 10px;
-}
+} */
 
 .quesation-container{
     max-width: 800px;
@@ -361,4 +462,30 @@ form input, form textarea{
     cursor: pointer;
     margin-bottom: 20px;
     
+}
+
+
+
+@media(max-width:460px){
+   .text-hero h1{
+    font-size: 30px;
+   }
+   .content img{
+    width: 300px;
+    margin: 0;
+   }
+   .Testimonal h2{
+    font-size: 20px;
+   }
+   /* footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+   } */
+   .contact{
+    position: relative;
+    top: 60px;
+   }
+   
 }
